# BlindDeconvolutionGPU

./: .gitignore  Python-Debug.ipynb  README.md  main.cu
sequential/: main_levin.m
sequential/lib/: blind.m  coarseToFine.m  deblur.m
src/: '  CMakeCache.txt  CMakeLists.txt  INSTALL  Kernel.txt  Makefile  README.md  adjustImage.cu  adjustImage.cuh  buildPyramid.cu  buildPyramid.cuh  cmake_install.cmake  convolution.m  cudnnDownConvolution.cu  cudnnDownConvolution.cuh  cudnnUpConvolution.cu  cudnnUpConvolution.cuh  divergence.cu  divergence.cuh  downConvolution.cu  downConvolution.cuh  epsilon.cu  epsilon.cuh  helper.cu  helper.cuh  legacy_main  main.cu  normalise.cu  normalise.cuh  pad.cu  pad.cuh  pyfunctions.py  run.sh  selectNonZero.cu  selectNonZero.cuh  show.py  tags  test.cu  test.cuh  testdownConv.cu  (+3 more)
src/data_from_python/: Image_1.mat  Image_10.mat  Image_2.mat  Image_3.mat  Image_4.mat  Image_5.mat  Image_6.mat  Image_7.mat  Image_8.mat  Image_9.mat  Kernel_0.mat  Kernel_1.mat  Kernel_10.mat  Kernel_2.mat  Kernel_3.mat  Kernel_4.mat  Kernel_5.mat  Kernel_6.mat  Kernel_7.mat  Kernel_8.mat  Kernel_9.mat  output_kernel.mat
